@@ -7,6 +7,7 @@ version <next>:
 - Lots of deprecated API cruft removed
 - fft and imdct optimizations for AVX (Sandy Bridge) processors
 - DPX image encoder
+- SMPTE 302M AES3 audio decoder
 
 
 version 0.7_beta1:
